[package]
name = "noisegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
image = "0.25.6"
rand = "0.9.0"
rand_distr = "0.5.1"

candle-core = { git = "https://github.com/aifx-art/candle.git", branch = "aifx" }
candle-nn = { git = "https://github.com/aifx-art/candle.git", optional = false, branch = "aifx" }
candle-transformers = { git = "https://github.com/aifx-art/candle.git", optional = false, branch = "aifx" }
