[package]
name = "noisegen"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
rand = "0.9.1"
rand_distr = "0.5.1"

#candle-core = { git = "https://github.com/EricLBuehler/candle.git"}
#candle-nn = { git = "https://github.com/EricLBuehler/candle.git", optional = false}
#candle-transformers = { git = "https://github.com/EricLBuehler/candle.git", optional = false }

# candle-core = { git = "https://github.com/aifx-art/candle.git", branch = "aifx" }
# candle-nn = { git = "https://github.com/aifx-art/candle.git", optional = false, branch = "aifx" }
# candle-transformers = { git = "https://github.com/aifx-art/candle.git", optional = false, branch = "aifx" }

#candle-core = { git = "https://github.com/aifx-art/candle-eb.git", branch = "dev_main" }
#candle-nn = { git = "https://github.com/aifx-art/candle-eb.git", optional = false, branch = "dev_main" }
#candle-transformers = { git = "https://github.com/aifx-art/candle-eb.git", optional = false, branch = "dev_main" }

candle-core = {  git = "https://github.com/huggingface/candle.git"  }
candle-nn = {git = "https://github.com/huggingface/candle.git", optional=false}
candle-transformers = {git = "https://github.com/huggingface/candle.git",  optional=false}
